[tool.poetry]
name = "samolet"
version = "0.1.0"
description = ""
authors = ["Dmitrii Rudenko <dmitriy.rudenko@sbermaket.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
geopandas = "^0.13.2"
matplotlib = "^3.7.3"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
